<resources>
    <string name="app_name">ShoeStore</string>
    <string name="instructions_text">1) Verify the Shoe is not already present in the Inventory \n\n 2) Use the Shoe Detail screen to add any new Product \n\n 3) Make sure all the required fields are added about the shoe</string>
    <string name="welcome_to_shoemart">Welcome to ShoeMart</string>
    <string name="welcome_subtitle">You are at the right place! We sell all top brand shows at a discounted rate. Come check out the different brands and models of Shoes. We are sure you will be happy.</string>
    <string name="instructions_button">Instructions</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="check_shoes">Inventory</string>
    <string name="shoe_name">Shoe Name :</string>
    <string name="company">Company :</string>
    <string name="description">Description :</string>
    <string name="shoe_size">Shoe Size :</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description_text">Description</string>
    <string name="shoe_size_text">Shoe size</string>
    <string name="company_text">Company</string>
    <string name="shoe_nametext">Shoe Name</string>
</resources>
