<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/dimen_16"
        android:paddingTop="150dp"
        android:paddingEnd="@dimen/dimen_16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_shoemart"
            android:textColor="@color/colorActionBar"
            android:layout_gravity="center_horizontal"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/welcome_subtitle"
            android:textAlignment="center"
            android:textSize="24sp" />



        <Button
            android:id="@+id/instructions_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/instructions_button"
            style="@style/buttonstyle"/>

    </LinearLayout>

    <data>

    </data>
</layout>