<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- The complexity for this screen is slightly high compared to other screens and it requires
    the textviews and corresponding editTexts should be constrained to each other -->
    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingStart="@dimen/dimen_20"
        android:paddingEnd="@dimen/dimen_20">

        <Button
            android:id="@+id/save_button"
            style="@style/buttonstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_description" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/buttonstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save_button" />

        <EditText
            android:id="@+id/shoe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:backgroundTint="@color/colorActionBar"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="text"
            android:text="@={shoe.name}"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_text" />

        <EditText
            android:id="@+id/shoe_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:inputType="text"
            android:text="@={shoe.company}"
            android:backgroundTint="@color/colorActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_company_text" />

        <EditText
            android:id="@+id/shoe_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:inputType="numberDecimal"
            android:text="@={``+shoe.size}"
            android:backgroundTint="@color/colorActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_size_text" />

        <EditText
            android:id="@+id/shoe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:text="@={shoe.description}"
            android:backgroundTint="@color/colorActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_description_text" />

        <TextView
            android:id="@+id/shoe_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_60"
            android:text="@string/shoe_nametext"
            android:textColor="@color/colorActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/company_text"
            android:textColor="@color/colorActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_name" />

        <TextView
            android:id="@+id/shoe_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/shoe_size_text"
            android:textColor="@color/colorActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_company" />

        <TextView
            android:id="@+id/shoe_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/description_text"
            android:textColor="@color/colorActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_size" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>